improve report values, change type on openapi and database
